--- a/Python/DigitClassification_NN.ipynb
+++ b/Python/DigitClassification_NN.ipynb
@@ -8,6 +8,8 @@
       "collapsed_sections": [
         "EmecX1x2rXxY",
         "_tW7DKmiwNm5",
+        "--qFA4YdvGW7",
+        "GUplVr82tUqS",
         "yLRITkDWxbOu",
         "tTG_z44dxlPW",
         "BkkC5WfY3zyN"
@@ -80,8 +82,7 @@
         "\r\n",
         "- [x] Github Repo\r\n",
         "- [x] K-Nearest Neighbor\r\n",
-        "- [ ] NN Low-Level\r\n",
-        "- [ ] NN by Keras/tensorflow\r\n",
+        "- [x] NN by Keras/tensorflow\r\n",
         "- [x] Code C-NN Low-Level\r\n",
         "- [x] Convolution Class\r\n",
         "- [x] Maxpool Class\r\n",
@@ -90,11 +91,12 @@
         "- [x] Training C-NN\r\n",
         "- [x] Make predictions for C-NN\r\n",
         "- [x] C-NN by Keras/tensorflow (High-level)\r\n",
-        "- [ ] Consider changing the attribute dimensions for softmax and training\r\n",
+        "- [ ] Optional:Consider changing the attribute dimensions for softmax and training\r\n",
         "- [ ] Optional: Generalize Convolution Class out of 3x3\r\n",
         "- [ ] Optional: Generalize  Maxpool Class out of 2x2\r\n",
         "- [ ] Optional: Fickleness of input # of features for softmax\r\n",
-        "- [ ] Optional: I'd like to make a visualization as it passes feedforward/backprop"
+        "- [ ] Optional: I'd like to make a visualization as it passes feedforward/backprop\r\n",
+        "- [ ] Optional: NN Low-Level"
       ]
     },
     {
@@ -132,11 +134,12 @@
         "#Visualization libraries\r\n",
         "import matplotlib.pyplot as plt\r\n",
         "#import altair as alt\r\n",
+        "#import seaborn as sns\r\n",
         "\r\n",
         "#Counter dict class\r\n",
         "from collections import Counter"
       ],
-      "execution_count": 1,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -148,7 +151,7 @@
         "#Importing MNIST data from keras\r\n",
         "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()"
       ],
-      "execution_count": 3,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -163,7 +166,7 @@
         "xTest = x_test.astype(np.int32)\r\n",
         "yTest = y_test.astype(np.int32)"
       ],
-      "execution_count": 4,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -182,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p0-ttHicgYcb",
-        "outputId": "88f9d04b-bfd2-47fb-9495-fc74c9c1afe0"
+        "outputId": "2c48fa48-70b9-4aae-8413-b6e1441aa342"
       },
       "source": [
         "#Printing shape\r\n",
@@ -209,10 +212,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 268
         },
         "id": "OHG-d2kugYeu",
-        "outputId": "7668b5b0-9cf0-445f-9c56-6b013255a8a1"
+        "outputId": "784c0ada-c66f-4248-8934-16e49a096378"
       },
       "source": [
         "#Visualizing the first 16 xTrain digits in a 4 by 4 grid.\r\n",
@@ -244,7 +248,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-LwQ3dVgYhQ",
-        "outputId": "1d317cc5-40a8-4b0a-d981-76a8eb8f0d4f"
+        "outputId": "06f95137-7efc-489e-bd12-43e9ac78e3b4"
       },
       "source": [
         "#This of course reflects our yTrain labels on our 28x28 matrix of xTrain\r\n",
@@ -262,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -282,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "inHQoNiatEjy",
-        "outputId": "fba5ea69-bf50-4b99-d133-12de733d65ce"
+        "outputId": "c7293577-5d49-400a-dbba-f0df32384b8b"
       },
       "source": [
         "trainLabelDict = Counter(yTrain)\r\n",
@@ -309,7 +313,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 12
         }
       ]
     },
@@ -317,10 +321,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 285
         },
         "id": "Uyt5TNKdtEls",
-        "outputId": "38b2f144-2f8a-4af2-a81c-080b0503dd0c"
+        "outputId": "cfc52dd8-09a5-4e50-b4d4-67ca6671dce3"
       },
       "source": [
         "plt.bar(range(len(trainLabelDict)), list(trainLabelDict.values()), align='center')"
@@ -337,7 +342,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -361,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TSTGCRKSjQ4-",
-        "outputId": "907587b1-8280-4309-f9b1-cd6dfbbcbcf1"
+        "outputId": "066946ca-f03e-4a0d-e692-6b44bb2b02b9"
       },
       "source": [
         "testLabelDict = Counter(yTest)\r\n",
@@ -388,7 +393,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 14
         }
       ]
     },
@@ -396,10 +401,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 283
         },
         "id": "gezX-yIEtVpF",
-        "outputId": "2691e246-a8f2-467a-ab72-e8e1449e5297"
+        "outputId": "8163cba4-3ea0-45ca-87ae-fdcebaacd8c3"
       },
       "source": [
         "plt.bar(range(len(testLabelDict)), list(testLabelDict.values()), align='center')"
@@ -416,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -456,9 +462,374 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gpiXTOMaLcTg"
+      },
+      "source": [
+        "Preprocessing"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "2_QdczzhS_dE"
+        "id": "2_QdczzhS_dE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23d57ac8-8669-454a-e4b5-079f6c48af99"
+      },
+      "source": [
+        "# Normalize the images.\r\n",
+        "xTrain = (xTrain / 255) - 0.5\r\n",
+        "xTest = (xTest / 255) - 0.5\r\n",
+        "\r\n",
+        "# Flatten the images.\r\n",
+        "xTrain = xTrain.reshape((-1, 784))\r\n",
+        "xTest = xTest.reshape((-1, 784))\r\n",
+        "#input = input.flatten()\r\n",
+        "\r\n",
+        "#printing shape\r\n",
+        "print(xTrain.shape)\r\n",
+        "print(xTest.shape)"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(60000, 784)\n",
+            "(10000, 784)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bN9CI48Cfse-"
+      },
+      "source": [
+        "Importing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gb13gfjlLWzo"
+      },
+      "source": [
+        "#Machine Learning libraries\r\n",
+        "from tensorflow import keras\r\n",
+        "from tensorflow.keras import layers"
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NpAJlAMtNCHf"
+      },
+      "source": [
+        "#In case we only want these in our space\r\n",
+        "from tensorflow.keras.models import Sequential\r\n",
+        "from tensorflow.keras.layers import Dense\r\n",
+        "from tensorflow.keras.layers import Dropout\r\n",
+        "#from tensorflow.keras import utils #hmmm so this doesn't work...\r\n",
+        "#from keras import utils #HMMMMM this doesn't work either\r\n",
+        "#why do I need the specific function and not utils package...?\r\n",
+        "from keras.utils import to_categorical"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rInuPaKofuoH"
+      },
+      "source": [
+        "An Initial Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m51bx5WoLW2J"
+      },
+      "source": [
+        "#Constructing our layers\r\n",
+        "model = Sequential([\r\n",
+        "  Dense(64, activation='relu'),\r\n",
+        "  Dense(64, activation='relu'),\r\n",
+        "  Dense(10, activation='softmax'),\r\n",
+        "])"
+      ],
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O5hFCyeZLW4m"
+      },
+      "source": [
+        "#Comppiling our model with categorical crossentropy loss; adam optimizer\r\n",
+        "model.compile(\r\n",
+        "  optimizer='adam',\r\n",
+        "  loss='categorical_crossentropy',\r\n",
+        "  metrics=['accuracy'],\r\n",
+        ")"
+      ],
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xlNRfr2-LW69",
+        "outputId": "f759b131-d689-4569-fad1-6aef9030031b"
+      },
+      "source": [
+        "#Training the model with 5 epochs and batching\r\n",
+        "#to_categorical is important in relation to our last softmax layer.\r\n",
+        "#In particular, we're feeding an array of integers, when we want an array of VECTORS\r\n",
+        "#...containing each integer classification\r\n",
+        "#i.e, [5] will become ~[0 0 0 0 0 1 0 0 0 0]\r\n",
+        "model.fit(\r\n",
+        "  xTrain, # training data\r\n",
+        "  to_categorical(yTrain), # training labels\r\n",
+        "  epochs=5,\r\n",
+        "  batch_size=32,\r\n",
+        ")"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.5651 - accuracy: 0.8308\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2026 - accuracy: 0.9380\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1488 - accuracy: 0.9542\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1203 - accuracy: 0.9622\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1001 - accuracy: 0.9686\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fce558b1d50>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6XCwEMGBOeqa",
+        "outputId": "2f149b95-0dbe-4f41-a393-8787b4a66e0a"
+      },
+      "source": [
+        "#Evaluating the model on the test data\r\n",
+        "model.evaluate(xTest,to_categorical(yTest))"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "313/313 [==============================] - 1s 2ms/step - loss: 0.1255 - accuracy: 0.9631\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.12549087405204773, 0.963100016117096]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "szLEA_EZbIms"
+      },
+      "source": [
+        "Adjusting and playing with the model/training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WlZzgJxbbT6G"
+      },
+      "source": [
+        "#Constructing our layers; now with dropout layers\r\n",
+        "model = Sequential([\r\n",
+        "  Dense(64, activation='relu'),\r\n",
+        "  Dense(64, activation='relu'),  \r\n",
+        "  Dropout(0.5),\r\n",
+        "  Dense(10, activation='softmax'),\r\n",
+        "])"
+      ],
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o0SGzhEydhJZ"
+      },
+      "source": [
+        "#Compiling our model with categorical crossentropy loss; adam optimizer\r\n",
+        "model.compile(\r\n",
+        "  optimizer='adam',\r\n",
+        "  loss='categorical_crossentropy',\r\n",
+        "  metrics=['accuracy'],\r\n",
+        ")"
+      ],
+      "execution_count": 97,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SdRnjnTSLW9V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9daad84-328f-4e44-bcb9-01518eddc0d9"
+      },
+      "source": [
+        "#model fit; now with validation\r\n",
+        "model.fit(\r\n",
+        "  xTrain,\r\n",
+        "  to_categorical(yTrain),\r\n",
+        "  epochs=10,\r\n",
+        "  batch_size=32,\r\n",
+        "  validation_data=(xTest, to_categorical(yTest))\r\n",
+        "  )"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.8142 - accuracy: 0.7340 - val_loss: 0.2211 - val_accuracy: 0.9338\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.3200 - accuracy: 0.9087 - val_loss: 0.1976 - val_accuracy: 0.9368\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2531 - accuracy: 0.9269 - val_loss: 0.1571 - val_accuracy: 0.9510\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.2128 - accuracy: 0.9380 - val_loss: 0.1434 - val_accuracy: 0.9568\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1942 - accuracy: 0.9440 - val_loss: 0.1511 - val_accuracy: 0.9523\n",
+            "Epoch 6/10\n",
+            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.1833 - accuracy: 0.9482 - val_loss: 0.1303 - val_accuracy: 0.9598\n",
+            "Epoch 7/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.1720 - accuracy: 0.9511 - val_loss: 0.1399 - val_accuracy: 0.9528\n",
+            "Epoch 8/10\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1644 - accuracy: 0.9516 - val_loss: 0.1295 - val_accuracy: 0.9619\n",
+            "Epoch 9/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1519 - accuracy: 0.9566 - val_loss: 0.1166 - val_accuracy: 0.9645\n",
+            "Epoch 10/10\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1519 - accuracy: 0.9570 - val_loss: 0.1182 - val_accuracy: 0.9648\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fce54707c50>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KoRrtXdFbH-e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2885f4be-03cc-454d-d9b9-1300e8e4254a"
+      },
+      "source": [
+        "#Evaluating the model on the test data\r\n",
+        "model.evaluate(xTest,to_categorical(yTest))"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "313/313 [==============================] - 1s 4ms/step - loss: 0.1182 - accuracy: 0.9648\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.1182100847363472, 0.9648000001907349]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ng4QZcrrLW_s"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yojpf1GrLXCQ"
       },
       "source": [
         ""
@@ -3274,7 +3645,7 @@
         "from tensorflow import keras\r\n",
         "from tensorflow.keras import layers"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3286,7 +3657,7 @@
         "#Importing MNIST data from keras\r\n",
         "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3301,7 +3672,7 @@
         "xTest = x_test.astype(np.int32)\r\n",
         "yTest = y_test.astype(np.int32)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3314,7 +3685,7 @@
         "num_classes = 10\r\n",
         "input_shape = (28, 28, 1)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3337,7 +3708,7 @@
         "yTrain = keras.utils.to_categorical(yTrain, num_classes)\r\n",
         "yTest = keras.utils.to_categorical(yTest, num_classes)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3352,7 +3723,7 @@
       "source": [
         "xTrain.shape"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3389,7 +3760,7 @@
         "    ]\r\n",
         ")"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3411,7 +3782,7 @@
         "#Fit the model with batch normalization and validation splitting\r\n",
         "model.fit(xTrain, yTrain, batch_size=batch_size, epochs=epochs, validation_split=0.1)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3478,7 +3849,7 @@
         "print(\"Test loss:\", score[0])\r\n",
         "print(\"Test accuracy:\", score[1])"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
