--- a/Python/KNNMNIST.ipynb
+++ b/Python/KNNMNIST.ipynb
@@ -35,6 +35,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fcBqP5SJdoUe"
+      },
+      "source": [
+        "## K-NN Overview\n",
+        "\n",
+        "We want to be able to classify. K-NN allows us to form a probabilistic identity for each possible classification by choosing K NEAREST Neighbors. Rather than 'nearest', we can think of 'most resembles'. Then we consider the k 'most resembles' and pick which classification shows up the most.\n",
+        "\n",
+        "In Summary:\n",
+        "\n",
+        "K-NN method:\n",
+        "1. Array of differences = **Difference Method** (test digit vs training)\n",
+        "2. Take the minimum K of (list)\n",
+        "3. **Majority Vote**: (Choose which classification shows up most! )\n",
+        "4. This is your Classification (~Probability Distribution Max)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WWRGBA2sohJT"
@@ -51,7 +70,7 @@
         "\n",
         "from tensorflow import keras #If you wish to import MNIST via keras"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +196,7 @@
         "#Importing MNIST data from keras\n",
         "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +211,7 @@
         "xTest = x_test.astype(np.int64)\n",
         "yTest = y_test.astype(np.int64)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +236,7 @@
         "#Alright, looks like we got it!\n",
         "xTrain"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +316,7 @@
         "  plt.subplot(4,4,i)\n",
         "  plt.imshow(xTrain[i-1], cmap=plt.get_cmap('gray'))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -327,7 +346,7 @@
         "#This of course reflects our yTrain labels on our 28x28 matrix of xTrain\n",
         "yTrain[0:16]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +377,7 @@
         "digit = xTrain[0]\n",
         "plt.imshow(digit, cmap=plt.get_cmap('gray'))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +419,7 @@
         "#It's value will relate with the same index : YEUP it's a five!\n",
         "yTrain[0]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +519,7 @@
         "np.set_printoptions(edgeitems=1, linewidth=500, \n",
         "    formatter=dict(float=lambda x: \"%.3g\" % x))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +534,7 @@
       "source": [
         "xTest[0]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +603,7 @@
         "    # element-wise computations are automatically handled by numpy\n",
         "    return ( np.sqrt(np.sum((p-q)**2)) )\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +633,7 @@
         "        if value == labelMax:\n",
         "            return key"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -648,7 +667,7 @@
         "    return (findMajority(kLabels))\n",
         "    "
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -663,7 +682,7 @@
       "source": [
         "euclidean_distance(xTest[0],xTrain[15])"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +710,7 @@
       "source": [
         "predictOneDigit(10,xTrain,yTrain,xTest[0])"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +739,7 @@
         "#Correct\n",
         "yTest[0]"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +773,7 @@
         "predictions1 = [predictOneDigit(10,xTrain,yTrain,xTest[i]) for i in range(50)]\n",
         "predictions1 = np.array(predictions1)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +788,7 @@
       "source": [
         "predictions1"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +816,7 @@
       "source": [
         "yTest[0:50]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +845,7 @@
         "boolArr = yTest[0:50] == predictions1\n",
         "boolArr"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +870,7 @@
         "def countBool(lst): \n",
         "    return sum(bool(x) for x in lst)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -867,7 +886,7 @@
         "accuracy = countBool(boolArr)/ len(boolArr)\n",
         "accuracy"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +908,7 @@
         "id": "WQZ15fhIsdai"
       },
       "source": [
-        "K-Flod Cross Validation manually carried out with K-NN"
+        "K-Fold Cross Validation manually carried out with K-NN"
       ]
     },
     {
@@ -938,7 +957,7 @@
         "    \n",
         "print(errors)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2618,7 +2637,9 @@
         "\n",
         "Yet our code methodology has an imprecision because of a small drop in accuracy. These indices can be seen when a boolean comparison is made bwteen this method and the standard tuple sort method\n",
         "\n",
-        "It should also be considered that perhaps sorting tuples is not the way to go to reduce computational complexity."
+        "It should also be considered that perhaps sorting tuples is not the way to go to reduce computational complexity.\n",
+        "\n",
+        "However this method wasn't perfect, so I did not continue it."
       ]
     },
     {
